# zews

./: .replit  pyproject.toml  requirements.txt
zews/: main.py  scrapy.cfg
zews/zews/: items.py  middlewares.py  pipelines.py  settings.py
zews/zews/spiders/: sitemaps.py
