[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "tornadoscrapyexample"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^1.8"
tornado = "^6.0"
twisted = "^19.10"
[tool.poetry.dev-dependencies]
